samples/_failures_safe/1761316420_942373_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19703cf8.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_19703cf8.c:189:12: error: missing terminating " character
  189 |     printf("D
      |            ^~
./samples/SAFE/__tmp_19703cf8.c:189:5: error: expected expression at end of input
  189 |     printf("D
      |     ^~~~~~
./samples/SAFE/__tmp_19703cf8.c:189:5: error: expected declaration or statement at end of input
